--- a/views/forget-pass.hbs
+++ b/views/forget-pass.hbs
@@ -1,39 +1,51 @@
-<div class="container padding-top-7-per" style="height: 35em;">
-    <div class="forget-pass-area display-grid">
-        <div class="forget-pass-input">
-            <div class="forget-pass padding-top-15-per">
-                <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Quên mật khẩu</span>
-                <div class="username">
-                    <input type="text" class="user-input" placeholder="Username">
+<div class="container" style="padding:0; width:95%">
+    <div class="content-section no-padding forget-pass-area  first-section">
+        <div class="row" style="padding: 50px 50px 100px 50px">
+            <div class="col-lg">
+                <div class="forget-pass-input">
+                    <div class="forget-pass padding-top-15-per">
+                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Quên mật khẩu</span>
+                        <div class="username">
+                            <input type="text" class="user-input" placeholder="Username">
+                        </div>
+                        <div class="forget-pass-but">
+                            <a href="/">
+                                <button class="forget-pass-button font-normal-bold">
+                                    <div style="width: 9ch;">Gửi</div>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="forget-pass-but">
-                    <a href="/">
-                        <button class="forget-pass-button font-normal-bold">
-                            <div style="width: 9ch;">Gửi</div>
-                        </button>
-                    </a>
+            </div>
+            <div class="col-lg">
+                <div class="login-area row justify-content-center">
+                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                        <div style="padding: 50px;">
+                            <div>
+                                {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
+                                <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Nhớ
+                                    ra mật khẩu?</span>
+                            </div>
+                            <div class="login">
+                                <a href="/login">
+                                    <button class="login-button font-normal-bold">Đăng Nhập</button>
+                                </a>
+
+                            </div>
+                        </div>
+
+
+
+                    </div>
                 </div>
             </div>
 
 
         </div>
-        <div class="login-area">
-            <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
-                <div style="height: 53%;">
-                    {{!-- <div>mail đổi mật khẩu sẽ được gửi trong 30s, nếu qua 12h chưa có vui lòng liên hệ support</div> --}}
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
-                        style="line-height: 3;">Nhớ ra mật khẩu?</span>
-                </div>
 
-                <div class="login">
-                    <a href="/login">
-                        <button class="login-button font-normal-bold">Đăng nhập</button>
-                    </a>
-
-                </div>
-
-            </div>
-        </div>
     </div>
 </div>
 
