--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,42 +1,55 @@
-<div class="container padding-top-7-per" style="height: 35em;">
-    <div class="login-area display-grid">
-        <div class="login-input">
-            <div class="login padding-top-15-per">
-                <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đăng Nhập</span>
-                <div class="username">
-                    <input type="text" class="user-input" placeholder="Username">
-                </div>
-                <div class="password">
-                    <input type="text" class="user-input" placeholder="password">
-                </div>
-                <div class="login-forget-pass">
-                    <a href="/">
-                        <button class="login-button font-normal-bold">Đăng nhập</button>
-                    </a>
+<div class="container" style="padding:0; width:95%">
+    <div class="content-section no-padding login-area  first-section">
+        <div class="row" style="padding: 50px 50px 100px 50px">
+            <div class="col-lg">
+                <div class="login-input">
+                    <div class="login padding-top-15-per">
+                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đăng Nhập</span>
+                        <div class="username">
+                            <input type="text" class="user-input" placeholder="Username">
+                        </div>
+                        <div class="password">
+                            <input type="text" class="user-input" placeholder="password">
+                        </div>
+                        <div class="login-forget-pass">
+                            <a href="/">
+                                <button class="login-button font-normal-bold">Đăng nhập</button>
+                            </a>
 
-                    <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
+                            <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="sign-up-area row justify-content-center">
+                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                        <div style="padding: 50px">
+                            <div>
+                                <span
+                                    class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Chưa
+                                    có tài
+                                    khoản</span>
+                            </div>
+
+                            <div class="sign-up">
+                                <a href="/sign-up">
+                                    <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                                </a>
+
+                            </div>
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
 
 
         </div>
-        <div class="sign-up-area">
-            <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
-                <div style="height: 53%;">
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
-                        style="line-height: 7;">Chưa có tài
-                        khoản</span>
-                </div>
 
-                <div class="sign-up">
-                    <a href="/sign-up">
-                        <button class="sign-up-button font-normal-bold">Đăng Ký</button>
-                    </a>
-
-                </div>
-
-            </div>
-        </div>
     </div>
 </div>
 
