--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,41 +1,53 @@
-<div class="container padding-top-7-per" style="height: 35em;">
-    <div class="sign-up-area display-grid">
-        <div class="sign-up-input">
-            <div class="sign-up padding-top-15-per">
-                <span class="font-size-xxx-large font-normal-bold text-color-3498DB"> Đăng Ký </span>
-                <div class="username">
-                    <input type="text" class="user-input" placeholder="Email sinh viên">
-                </div>
-                <div class="password">
-                    <input type="text" class="user-input" placeholder="password">
-                </div>
-                <div class="sign-up-but">
-                    <a href="/">
-                        <button class="sign-up-button font-normal-bold">Đăng Ký</button>
-                    </a>
+<div class="container" style="padding:0; width:95%">
+    <div class="content-section no-padding sign-up-area  first-section">
+        <div class="row" style="padding: 50px 50px 100px 50px">
+            <div class="col-lg">
+                <div class="sign-up-input">
+                    <div class="sign-up padding-top-15-per">
+                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB"> Đăng Ký </span>
+                        <div class="username">
+                            <input type="text" class="user-input" placeholder="Email sinh viên">
+                        </div>
+                        <div class="password">
+                            <input type="text" class="user-input" placeholder="password">
+                        </div>
+                        <div class="sign-up-but">
+                            <a href="/">
+                                <button class="sign-up-button font-normal-bold">Đăng Ký</button>
+                            </a>
 
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="login-area row justify-content-center">
+                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
+                        <div style="padding: 50px;">
+                            <div>
+                                {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
+                                <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Đã
+                                    có tài khoản</span>
+                            </div>
+                            <div class="login">
+                                <a href="/login">
+                                    <button class="login-button font-normal-bold">Đăng Nhập</button>
+                                </a>
+
+                            </div>
+                        </div>
+
+
+
+                    </div>
                 </div>
             </div>
 
 
         </div>
-        <div class="login-area">
-            <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
-                <div style="height: 55%;">
-                    {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
-                    <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per"
-                        style="line-height: 6;">Đã có tài khoản</span>
-                </div>
 
-                <div class="login">
-                    <a href="/login">
-                        <button class="login-button font-normal-bold">Đăng Nhập</button>
-                    </a>
-
-                </div>
-
-            </div>
-        </div>
     </div>
 </div>
 
