--- a/views/borrow.hbs
+++ b/views/borrow.hbs
@@ -1,22 +1,36 @@
 <link rel="stylesheet" href="/stylesheets/borrow.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <div id="borrow-filter">
-    <div id="date-range-selector">
-        <label for="date-time-input">Khoảng thời gian</label>
-        <div id="date-time-group" class="input-group">
+    <div id="date-selector">
+        <label for="date-input">Ngày</label>
+        <div id="date-group" class="input-group input-group-sm">
             <div class="input-group-prepend">
                 <button class="btn btn-secondary" type="button"><i class="fa fa-calendar"></i></button>
             </div>
-            <input type="text" class="form-control" id="date-time-input">
+            <input type="text" class="form-control" id="date-input">
         </div>
     </div>
-    <div id="filter-selector">
-        Ẩn những sách đã mượn
+
+    <div class="dropdown">
+        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="time-selector" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        </button>
+        <div id="time-list" class="dropdown-menu" aria-labelledby="time-selector">
+        </div>
     </div>
+
+    <button class="btn btn-sm btn-outline-primary" type="button" id="btn-now">
+        Hiện tại
+    </button>
+
+    
+    <button class="btn btn-sm btn-outline-secondary" type="button" id="btn-show-borrowed">
+        Hiện sách đã mượn
+    </button>
 </div>
 <hr>
 <div id = "borrow-view">
     <div class="time-title">
-        Ngày 22/10/2020
+        Thứ ba, ngày 28/05/2020
     </div>
     <div class="time-title second-title">
         7:00
@@ -37,10 +51,10 @@
         {{> borrow_card}}
     </div>
     <div class="time-title">
-        Ngày 23/10/2020
+        Thứ tư, ngày 29/05/2020
     </div>
     <div class="time-title second-title">
-        7:00
+        9:00
     </div>
     <div class="borrow-list">
         {{> borrow_card}}
@@ -49,7 +63,7 @@
         {{> borrow_card}}
     </div>
     <div class="time-title second-title">
-        12:00
+        11:00
     </div>
     <div class="borrow-list">
         {{> borrow_card}}
@@ -60,13 +74,5 @@
 </div>
     
 </div>
-<script src="https://cdn.jsdelivr.net/npm/litepicker/dist/js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/litepicker-module-ranges/dist/index.js"></script>
-<script>
-   var picker = new Litepicker({ element: document.getElementById('date-time-input'),
-        lang: "vi",
-        singleMode: false,
-        maxDate: new Date(),
-    });
-    picker.setDateRange(new Date(), new Date());
-</script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="/function/borrow.js"></script>
