--- a/views/buy-book.hbs
+++ b/views/buy-book.hbs
@@ -1,14 +1,15 @@
 <link rel="stylesheet" href="/stylesheets/buy-book.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<div class="container-fluid  first-section bg-white padding-left-3em">
-    <div style="width: 100%; text-align: center; padding: 2em 0;" class=" title-section font-size-xx text-color-408CFF">Đăng ký mua
+<div class="container-fluid  first-section bg-white padding-left-3em content-section">
+    <div style="width: 100%; text-align: center; padding: 2em 0;" class=" title-section font-size-xx text-color-408CFF">
+        Đăng ký mua
         sách</div>
-    <div class="container display-flex" style="padding-left: 10em;">
-        <div class="upload-img">
+    <div class="display-flex justify-content-center">
+        <div class="upload-img col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <input type="file" id="input-file" accept="image/png, image/jpeg" />
             <div id="img-area"></div>
         </div>
-        <div class="book-info" style="padding: 0 0 5em 5em;">
+        <div class="book-info col-xs-4 col-sm-4 col-md-4 col-lg-4" >
             <div>
                 <div>Tên sách</div>
                 <input type="text" name="book-name" id="book-name" class="text-box-size-100-per"
@@ -23,12 +24,14 @@
 
             <div class="padding-top-1em">
                 <div>Tải bản lần thứ</div>
-                <input type="text" name="book-renumber" id="book-renumber" class="text-box-size-100-per" placeholder="3">
+                <input type="text" name="book-renumber" id="book-renumber" class="text-box-size-100-per"
+                    placeholder="3">
             </div>
 
             <div class="padding-top-1em">
                 <div>Nhà xuất bản</div>
-                <input type="text" name="book-producer" id="book-producer" class="text-box-size-100-per" placeholder="NXB trẻ">
+                <input type="text" name="book-producer" id="book-producer" class="text-box-size-100-per"
+                    placeholder="NXB trẻ">
             </div>
 
             <div class="padding-top-1em">
@@ -42,11 +45,11 @@
                 <input type="text" name="ISBN" id="ISBN" class="text-box-size-100-per" placeholder="0123456789">
             </div>
             <div class="button-area display-flex padding-top-1em" style="padding-left: 10em;">
-                    <button class="customized-btn blue-bg-white-text"
-                        style="border:none; background-color: #3498db;">Xác nhận</button>
-                    <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
-                        <div style="width:8ch">Hủy</div>
-                    </button>
+                <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
+                    nhận</button>
+                <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
+                    <div style="width:8ch">Hủy</div>
+                </button>
             </div>
         </div>
     </div>
