--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,14 +6,14 @@
                     <div class="login padding-top-15-per">
                         <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đăng Nhập</span>
                         <div class="username">
-                            <input type="text" class="user-input" placeholder="Username">
+                            <input id="username_form" type="text" class="user-input" placeholder="Username">
                         </div>
                         <div class="password">
-                            <input type="text" class="user-input" placeholder="password">
+                            <input id="password_form" type="text" class="user-input" placeholder="password">
                         </div>
                         <div class="login-forget-pass">
                             <a href="/">
-                                <button class="login-button font-normal-bold">Đăng nhập</button>
+                                <button class="login-button font-normal-bold" onclick="trigger_post_login()">Đăng nhập</button>
                             </a>
 
                             <a href="/forget-pass" class="forget-pass font-normal-bold grey">quên mật khẩu</a>
@@ -56,3 +56,4 @@
 
 <link rel="stylesheet" href="/stylesheets/login.css">
 <script src="/function/change-nav.js" current_page="Đăng nhập"></script>
+<script src="/function/login.js"></script>
