Xong phần logout
- Cho phép đăng nhập thì cũng cho phép đăng xuất
- Trong lúc logout thì cũng remove account_type

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -86,6 +86,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
   <script src="/function/login-checking-type-and-loading.js"></script>
+  <script src="/function/layout.js"></script>
 </body>
 
 </html>
