Bổ sung tính năng quay về trang trước
Trong phần giỏ sách có tính năng quay về trang trước nên cần thêm tính năng này.

--- a/views/carts.hbs
+++ b/views/carts.hbs
@@ -37,7 +37,7 @@
         <div class="row align-content-center" style="padding: 0 100px">
             <div class="col-md">
                 <div class="text-center text-md-left">
-                    <a href="#">← Quay lại trang trước</a>
+                    <a href="javascript:history.back()">← Quay lại trang trước</a>
                 </div>
 
 
