--- a/views/buy-book.hbs
+++ b/views/buy-book.hbs
@@ -4,12 +4,12 @@
     <div style="width: 100%; text-align: center; padding: 2em 0;" class=" title-section font-size-xx text-color-408CFF">
         Đăng ký mua
         sách</div>
-    <div class="display-flex justify-content-center">
-        <div class="upload-img col-xs-3 col-sm-3 col-md-3 col-lg-3">
+    <div class="row justify-content-center">
+        <div class="upload-img row">
             <input type="file" id="input-file" accept="image/png, image/jpeg" />
             <div id="img-area"></div>
         </div>
-        <div class="book-info col-xs-4 col-sm-4 col-md-4 col-lg-4" >
+        <div class="book-info col-xs-4 col-sm-4 col-md-4 col-lg-4" style="padding-left:  3em;">
             <div>
                 <div>Tên sách</div>
                 <input type="text" name="book-name" id="book-name" class="text-box-size-100-per"
@@ -43,14 +43,14 @@
             <div class="padding-top-1em">
                 <div>ISBN</div>
                 <input type="text" name="ISBN" id="ISBN" class="text-box-size-100-per" placeholder="0123456789">
+                 <button class="customized-btn blue-bg-white-text"
+                        style="border:none; background-color: #3498db;">Xác
+                        nhận</button>
+                    <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
+                        <div style="width:8ch">Hủy</div>
+                    </button>
             </div>
-            <div class="button-area display-flex padding-top-1em" style="padding-left: 10em;">
-                <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
-                    nhận</button>
-                <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
-                    <div style="width:8ch">Hủy</div>
-                </button>
-            </div>
+
         </div>
     </div>
 
