--- a/views/borrow.hbs
+++ b/views/borrow.hbs
@@ -35,8 +35,6 @@
 </div>
     
 </div>
-<script>
-    const borrowData = {{stringify borrowData}};
-</script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="/function/borrow.js"></script>
+<script src="/function/borrow-card.js"></script>
