--- a/public/stylesheets/borrower-profile.css
+++ b/public/stylesheets/borrower-profile.css
@@ -32,3 +32,46 @@
 .table td {
     vertical-align: middle;
 }
+
+#returning, #borrowing {
+    height: 100%;
+    overflow-y: auto;
+}
+
+.table thead {
+    border: none;
+}
+
+.table thead th{
+    position: sticky;
+    background: white;
+    top: -1px;
+}
+
+#pills-tabContent {
+    flex: 1;
+    flex-basis: 100%;
+    overflow: hidden;
+}
+
+#content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.tab-cell-center {
+    text-align: center;
+}
+
+#return-function {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top :5px;
+    margin-bottom: 5px;
+}
+
+#btn-fine-detail {
+    display: inline;
+}
