--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,10 +6,10 @@
                     <div class="login padding-top-15-per">
                         <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đăng Nhập</span>
                         <div class="username">
-                            <input id="username_form" type="text" class="user-input" placeholder="Username">
+                            <input id="username_form" type="text" class="user-input" placeholder="Tên đăng nhập">
                         </div>
                         <div class="password">
-                            <input id="password_form" type="text" class="user-input" placeholder="password">
+                            <input id="password_form" type="text" class="user-input" placeholder="Mật khẩu">
                         </div>
                         <div class="login-forget-pass">
                             <a href="/">
