--- a/views/buy-book.hbs
+++ b/views/buy-book.hbs
@@ -5,7 +5,7 @@
         Đăng ký mua
         sách</div>
     <div class="display-flex justify-content-center">
-        <div class="upload-img col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <div class="upload-img row">
             <input type="file" id="input-file" accept="image/png, image/jpeg" />
             <div id="img-area"></div>
         </div>
