chinh class va 1 so css

--- a/views/change-password.hbs
+++ b/views/change-password.hbs
@@ -2,29 +2,29 @@
     <div class="content-section no-padding forget-pass-area  first-section">
         <div class="row" style="padding: 50px 50px 100px 50px">
             <div class="col-lg">
-                <div class="forget-pass-input">
+                <div class="account-area">
                     <div class="forget-pass padding-top-3em">
                         <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đổi mật khẩu</span>
-                        <div class="username">
+                        <div class="password">
                             <input type="text" class="user-input" id = "current-pass" placeholder="password hiện tại">
                         </div>
 
-                        <div class="username">
+                        <div class="password">
                             <input type="text" class="user-input" id="new-password" placeholder="password mới">
                         </div>
                         
-                        <div class="username">
+                        <div class="password">
                             <input type="text" class="user-input" id="confirm-password" placeholder="Xác nhận password">
                         </div>
 
-                        <div class="forget-pass-but">
+                        <div class="confirm-area">
                             <a href="/">
-                                <button class="forget-pass-button font-normal-bold">
+                                <button class="confirm-button font-normal-bold">
                                     <div style="width: 9ch;">Xác nhận</div>
                                 </button>
                             </a>
                             <a href="/">
-                                <button class="forget-pass-button font-normal-bold">
+                                <button class="customized-btn font-normal-bold">
                                     <div style="width: 9ch;">Hủy</div>
                                 </button>
                             </a>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="col-lg">
-                <div class="login-area row justify-content-center">
+                <div class="row justify-content-center">
                     <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
                         <div style="padding: 50px;">
                             <div>
@@ -44,7 +44,7 @@
                             </div>
                             <div class="login">
                                 <a href="/" id = "index">
-                                    <button class="login-button font-normal-bold">Trang chủ</button>
+                                    <button class="confirm-button font-normal-bold">Trang chủ</button>
                                 </a>
 
                             </div>
