--- a/views/buy-book-manager.hbs
+++ b/views/buy-book-manager.hbs
@@ -4,7 +4,7 @@
 
     <div class="content-section d-flex justify-content-center bg-white no-padding align-items-center">
         <div id="" class="input-group col-6">
-            <input type="text" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
+            <input type="text" id = "search-book" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
                 aria-describedby="basic-addon1">
             <div class="input-group-append">
                 <a class="input-group-text" href="#"><img src="/images/search-icon.svg" alt="" style="width: 20px;"></a>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="table-responsive padding-left-3em">
-        <table class="table">
+        <table class="table" id = "table-manager">
             <thead>
                 <tr>
                     <th scope="col">ISBN</th>
@@ -30,14 +30,14 @@
                     <th scope="col">Tác giả</th>
                     <th scope="col">Nhà sản xuất</th>
                     <th scope="col">Ngày đặt</th>
-                    <th scope="col" id = "activate">Hoạt động</th>
+                    <th scope="col" id="activate">Hoạt động</th>
                     <th scope="col" style="display: none" id="bought-day"> Ngày nhập</th>
                 </tr>
             </thead>
             <tbody>
                 {{#each Booking_arr.booking_book}}
-                
-                <tr class="booking-data" >
+
+                <tr class="booking-data">
                     <th scope="row">{{this.ISBN}}</th>
                     <th scope="row"> {{this.bookID}}</th>
                     <th>{{this.book_name}}</th>
@@ -49,7 +49,7 @@
                         <button class="customized-btn">Hủy bỏ</button>
                     </th>
                 </tr>
-                
+
                 {{/each}}
                 {{#each Bought_arr.bought_book}}
                 <tr class="bought-book-data" style="display: none;">
