chỉnh font weight tiêu đề cho đẹp
chỉnh font weigth vì tiêu đề thin nhìn thấy kì

--- a/views/lib-confirmID.hbs
+++ b/views/lib-confirmID.hbs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheets/lib-confirmID.css">
 
 <div class="container-fluid bg-white">
-    <div class="text-center text-color-408CFF font-size-xx">
+    <div class="text-center text-color-408CFF font-size-xx" style="font-weight: bold; padding-top: 5px">
         Nhập mã người dùng cần xác nhận
     </div>
 
