--- a/views/index-lib.hbs
+++ b/views/index-lib.hbs
@@ -177,3 +177,5 @@
     };
 </script>
 <script src="/function/index-lib.js"></script>
+
+<script src="/function/nav-lib.js" current_page="Trang chủ"></script>
