--- a/views/borrow.hbs
+++ b/views/borrow.hbs
@@ -38,3 +38,4 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="/function/borrow.js"></script>
 <script src="/function/borrow-card.js"></script>
+<script src="/function/nav-lib.js" current_page="Mượn sách"></script>
