--- a/views/layout-lib.hbs
+++ b/views/layout-lib.hbs
@@ -18,57 +18,13 @@
 </head>
 
 <body id>
-  <div id="top-bar" class = "fluid-container row align-items-center">
-    <div id="function" class = "col">
-      <div id="btn-menu" class = "header-btn">
-        <i class="fa fa-bars"></i>
-      </div>
-      <div id="btn-qr" class = "header-btn">
-        <i class="fa fa-qrcode"></i>
-        <span>Quét mã QR</span>
-      </div>
-      {{#if export}}
-      <div id="btn-export" class = "header-btn">
-        <i class="fa fa-save"></i>
-        <span>Xuất ra csv</span>
-      </div>
-      {{/if}}
-      {{#if search}}
-      <div id="search-box">
-        <div class="input-group">
-          <input id="search-input" type="text" class="form-control" placeholder="Thông tin cần tìm">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
-          </div>
-        </div>
-      </div>
-      {{/if}}
-    </div>
 
-    <div id="account" class = "col-auto">
-      <span id="username">
-        Tên tài khoản
-      </span>
-      <img id="profile-picture" src="/images/blank-profile-picture.png" class="rounded-circle" alt="Ảnh đại diện" width="40" height="40"> 
-    </div>
-  </div>
-  <div id="main">
-
-    <div id="content" class = "fluid-container">
-      {{{body}}}
-    </div>
-    <footer>
-      © 2020 Trường Đại học Khoa học Tự nhiên
-    </footer>
-  </div>
-
-  
   <div id="side-bar" class="col">
     <a class="navbar-brand no-padding-top-bot" href="#">
       <img src="/images/logo-khoa.png" alt="" id="logo">
     </a>
     <ul class="nav flex-column">
-      <li class="nav-item nav-current">
+      <li class="nav-item ">
         <a class="nav-link" href="/librarian/">Trang chủ</a>
       </li>
       <li class="nav-item">
@@ -91,6 +47,52 @@
       </li>
     </ul>
   </div>
+  <div id="top-bar" class="fluid-container row align-items-center">
+    <div id="function" class="col">
+      <div id="btn-menu" class="header-btn">
+        <i class="fa fa-bars"></i>
+      </div>
+      <div id="btn-qr" class="header-btn">
+        <i class="fa fa-qrcode"></i>
+        <span>Quét mã QR</span>
+      </div>
+      {{#if export}}
+      <div id="btn-export" class="header-btn">
+        <i class="fa fa-save"></i>
+        <span>Xuất ra csv</span>
+      </div>
+      {{/if}}
+      {{#if search}}
+      <div id="search-box">
+        <div class="input-group">
+          <input id="search-input" type="text" class="form-control" placeholder="Thông tin cần tìm">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button"><i class="fa fa-search"></i></button>
+          </div>
+        </div>
+      </div>
+      {{/if}}
+    </div>
+
+    <div id="account" class="col-auto">
+      <span id="username">
+        Tên tài khoản
+      </span>
+      <img id="profile-picture" src="/images/blank-profile-picture.png" class="rounded-circle" alt="Ảnh đại diện"
+        width="40" height="40">
+    </div>
+  </div>
+  <div id="main">
+
+    <div id="content" class="fluid-container">
+      {{{body}}}
+    </div>
+    <footer>
+      © 2020 Trường Đại học Khoa học Tự nhiên
+    </footer>
+  </div>
+
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
