xong booking manager page

--- a/views/account-manager.hbs
+++ b/views/account-manager.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="search-area display-flex padding-top-3em ">
         <div id="" class="input-group col-6 padding-right-3em">
-            <input type="text" id="search-acc" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..."
+            <input type="text" id="search-acc" class="form-control" placeholder="Tìm id, username, ..."
                 aria-label="Username" aria-describedby="basic-addon1">
         </div>
 
@@ -68,3 +68,5 @@
     </div>
     <div style="padding-bottom: 3em;">
     </div>
+
+<script src="/function/nav-lib.js" current_page="Quản lí tài khoản"></script>
