--- a/views/layout-lib.hbs
+++ b/views/layout-lib.hbs
@@ -34,10 +34,10 @@
         <a class="nav-link" href="#">Trả sách</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Quản lí mua sách</a>
+        <a class="nav-link" href="/librarian/booking-manager">Quản lí mua sách</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Quản lí tài khoản</a>
+        <a class="nav-link" href="/librarian/account-manager">Quản lí tài khoản</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Quản lí luật</a>
