xong booking manager page

--- a/views/lib-booking-book-manager.hbs
+++ b/views/lib-booking-book-manager.hbs
@@ -3,7 +3,7 @@
 <div class="bg-white container-fluid" style="width: 100%;">
     <div class="display-flex ">
         <div class="text-color-408CFF font-size-xx" style="flex: 0.95;">
-            Quản lý tài khoản
+            Quản lý mua sách
         </div>
 
         <div class="csv-area" style="float: right">
