--- a/views/lib-booking-book-manager.hbs
+++ b/views/lib-booking-book-manager.hbs
@@ -7,10 +7,10 @@
         </div>
 
         <div class="csv-area" style="float: right">
-            <div>
+            <div class="export-csv">
                 <i class="fa fa-table" aria-hidden="true"></i>Xuất file csv
             </div>
-            <div><i class="fa fa-table" aria-hidden="true"></i>Nhập từ file csv</div>
+            <div class="input-csv"><i class="fa fa-table" aria-hidden="true"></i>Nhập từ file csv</div>
         </div>
     </div>
     <div class="search-area display-flex padding-top-3em ">
